--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "dotenv": "^10.0.0",
+    "google-map-react": "^2.1.10",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
