--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "google-maps-react": "^2.0.6",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-calendar": "^3.5.0",
     "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
     "react-material-ui-form-validator": "^3.0.0",
